Use Integer.valueOf not new Integer().
git-svn-id: http://jgrid.googlecode.com/svn/trunk@90 17bb0ecf-38c4-95f9-1e6d-ca9926013565